# songsorter

./: README.md
playlist-triage-backend/: .env.example  .gitignore  Dockerfile  environment.yml  pyproject.toml  requirements.txt  run_dev.sh  run_prod.sh
playlist-triage-backend/app/: main.py
playlist-triage-backend/app/core/: config.py  dependencies.py  exceptions.py  logging.py
playlist-triage-backend/app/middleware/: __init__.py  error_handling.py
playlist-triage-backend/app/routers/: __init__.py  auth.py  health.py  triage.py
playlist-triage-backend/app/schemas/: spotify.py  triage.py
playlist-triage-backend/app/services/: spotify_service.py
playlist-triage-backend/tests/: conftest.py  test_config.py  test_health.py
